# EchoScript

./: .dockerignore  .gitignore  App.tsx  Dockerfile  README.md  dummy.webm  index.css  index.html  package-lock.json  package.json  server.ts  test-env.ts  test-gemini-audio.js  test-gemini-file.js  test-hang.cjs  test-hang2.cjs  test-jobs.js  test-stream.js  testEager.ts  testOsTmp.ts  testUploadChunk.ts  testUploadMultiple.ts  types.ts  vite.config.ts  wrangler.toml
components/: ApiKeySettings.tsx  AudioRecorder.tsx  FileUploader.tsx  TranscriptPDF.tsx  TranscriptionDisplay.tsx
services/: geminiService.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  gemini.rs  keychain.rs  lib.rs  types.rs
uploads/: xt8qlryserp_package.json
worker/: index.ts
