[package]
name = "echoscript"
version = "0.1.0"
description = "EchoScript AI - local audio transcription"
authors = ["JusheZion"]
license = ""
repository = "https://github.com/JusheZion/EchoScript"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls"] }
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread", "macros"] }
keyring = { version = "3.6.3", features = ["apple-native"] }
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
